// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zod v3 > basic 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "This is a test route",
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "required": [
                  "message",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`zod v3 > describeResponse 1`] = `
{
  "components": {
    "parameters": {
      "Param": {
        "in": "path",
        "name": "id",
        "required": true,
        "schema": {
          "type": "number",
        },
      },
    },
  },
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/{id}": {
      "get": {
        "description": "This is a test route",
        "operationId": "getById",
        "parameters": [
          {
            "$ref": "#/components/parameters/Param",
          },
          {
            "in": "query",
            "name": "limit",
            "schema": {
              "default": 10,
              "type": "number",
            },
          },
          {
            "in": "query",
            "name": "offset",
            "schema": {
              "default": 0,
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "count": {
                      "type": "number",
                    },
                    "result": {
                      "items": {
                        "type": "string",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "result",
                    "count",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`zod v3 > operation id for path with dash 1`] = `
{
  "components": {
    "parameters": {
      "Param": {
        "in": "path",
        "name": "id",
        "required": true,
        "schema": {
          "type": "number",
        },
      },
    },
  },
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/some-path": {
      "get": {
        "description": "This is a test route",
        "operationId": "getSomePath",
        "parameters": [
          {
            "$ref": "#/components/parameters/Param",
          },
          {
            "in": "query",
            "name": "limit",
            "schema": {
              "default": 10,
              "type": "number",
            },
          },
          {
            "in": "query",
            "name": "offset",
            "schema": {
              "default": 0,
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "count": {
                      "type": "number",
                    },
                    "result": {
                      "items": {
                        "type": "string",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "result",
                    "count",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`zod v3 > with metadata 1`] = `
{
  "components": {
    "schemas": {
      "SuccessResponse": {
        "properties": {
          "message": {
            "type": "string",
          },
        },
        "required": [
          "message",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "This is a test route",
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "required": [
                  "message",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/SuccessResponse",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`zod v3 > with reference in parameter 1`] = `
{
  "components": {
    "parameters": {
      "Param": {
        "in": "path",
        "name": "id",
        "required": true,
        "schema": {
          "type": "number",
        },
      },
    },
  },
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/{id}": {
      "get": {
        "description": "This is a test route",
        "operationId": "getById",
        "parameters": [
          {
            "$ref": "#/components/parameters/Param",
          },
          {
            "in": "query",
            "name": "limit",
            "schema": {
              "default": 10,
              "type": "number",
            },
          },
          {
            "in": "query",
            "name": "offset",
            "schema": {
              "default": 0,
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "count": {
                      "type": "number",
                    },
                    "result": {
                      "items": {
                        "type": "string",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "result",
                    "count",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`zod v3 basic 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "This is a test route",
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "required": [
                  "message",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`zod v3 with metadata 1`] = `
{
  "components": {
    "schemas": {
      "SuccessResponse": {
        "properties": {
          "message": {
            "type": "string",
          },
        },
        "required": [
          "message",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "This is a test route",
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "required": [
                  "message",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/SuccessResponse",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`zod v3 with reference in parameter 1`] = `
{
  "components": {
    "parameters": {
      "Param": {
        "in": "path",
        "name": "id",
        "required": true,
        "schema": {
          "type": "number",
        },
      },
    },
  },
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/{id}": {
      "get": {
        "description": "This is a test route",
        "operationId": "getById",
        "parameters": [
          {
            "$ref": "#/components/parameters/Param",
          },
          {
            "in": "query",
            "name": "limit",
            "schema": {
              "default": 10,
              "type": "number",
            },
          },
          {
            "in": "query",
            "name": "offset",
            "schema": {
              "default": 0,
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "count": {
                      "type": "number",
                    },
                    "result": {
                      "items": {
                        "type": "string",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "result",
                    "count",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`zod v3 describeResponse 1`] = `
{
  "components": {
    "parameters": {
      "Param": {
        "in": "path",
        "name": "id",
        "required": true,
        "schema": {
          "type": "number",
        },
      },
    },
  },
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/{id}": {
      "get": {
        "description": "This is a test route",
        "operationId": "getById",
        "parameters": [
          {
            "$ref": "#/components/parameters/Param",
          },
          {
            "in": "query",
            "name": "limit",
            "schema": {
              "default": 10,
              "type": "number",
            },
          },
          {
            "in": "query",
            "name": "offset",
            "schema": {
              "default": 0,
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "count": {
                      "type": "number",
                    },
                    "result": {
                      "items": {
                        "type": "string",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "result",
                    "count",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`zod v3 operation id for path with dash 1`] = `
{
  "components": {
    "parameters": {
      "Param": {
        "in": "path",
        "name": "id",
        "required": true,
        "schema": {
          "type": "number",
        },
      },
    },
  },
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/some-path": {
      "get": {
        "description": "This is a test route",
        "operationId": "getSomePath",
        "parameters": [
          {
            "$ref": "#/components/parameters/Param",
          },
          {
            "in": "query",
            "name": "limit",
            "schema": {
              "default": 10,
              "type": "number",
            },
          },
          {
            "in": "query",
            "name": "offset",
            "schema": {
              "default": 0,
              "type": "number",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "count": {
                      "type": "number",
                    },
                    "result": {
                      "items": {
                        "type": "string",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "result",
                    "count",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;
